# planaieditor

./: .prettierignore  .prettierrc  CONTRIBUTING.md  EXAMPLES.md  README.md  TODO.md
.cursor/rules/: general.mdc  python.mdc  svelte-5.mdc  svelte-splitpanes.mdc  svelte5testing.mdc
.github/workflows/: ci_cd.yml
backend/: .gitignore  app.py  pyproject.toml
backend/.github/workflows/: ci_cd.yml
backend/app/: patch.py  python.py  utils.py
backend/app/codesnippets/: imports.py  inspect_module.py
backend/planaieditor/: app.py  filesystem.py  llm_interface_utils.py  lsp_handler.py  patch.py  python.py  tmpfilemanager.py  utils.py  venv.py
backend/planaieditor/codesnippets/: export_clean.py  export_execute.py  imports.py
backend/tests/: __init__.py  conftest.py  test_app.py  test_filesystem.py  test_lsp_handler.py  test_patch.py  test_python.py  test_roundtrip.py  test_socket_server.py  test_tmpfilemanager.py  test_utils.py  test_venv.py
backend/tests/data/: data-input-test.json  edge-removal.json  simple-llmtaskworker.json  transformed_data_deepsearch_fixture.json  two-workers.json
backend/tests/e2e/: README.md  comparison_utils.py  test_assistant_input.py  test_data_input_connection.py  test_edge_removal.py  test_import_export.py  test_llm_taskworker.py  test_simple_connection.py  test_simple_worker.py  test_task_deletion.py  utils.py
backend/tests/e2e/fixtures/: releasenotes_fixture.py  tool_multiply_fixture.py
documents/: design.md
frontend/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/lib/: monaco.ts
frontend/src/lib/components/: AboutModal.svelte  Assistant.svelte  BaseList.svelte  ContextMenu.svelte  ContextMenu.svelte.test.ts  EditPane.svelte  EditableCodeSection.svelte  FieldEditor.svelte  FileSystemDialog.svelte  FullScreenEditor.svelte  GraphNameDialog.svelte  HeaderIcon.svelte  InputHandle.svelte  LLMConfigModal.svelte  LLMConfigSelector.svelte  ListPane.svelte  PythonInterpreterSelector.svelte  SideDropdownMenu.svelte  (+8 more)
frontend/src/routes/: +layout.svelte  +page.svelte
prompts/: phosphor-prompt.md  svelte5-prompt.md
(+48 files in other folders)
