[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "eventlet (>=0.39.1,<0.40.0)",
    "planai[all] (>=0.4.1) ; python_version >= \"3.10\" and python_version < \"4.0\"",
    "flask-cors (>=5.0.1) ; python_version >= \"3.10\" and python_version < \"4.0\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
pytest = "^8.3.5"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

