[project]
name = "planaieditor"
version = "0.1.0"
description = "PlanAI Editor Backend and UI Server"
authors = [{name = "Niels Provos", email = "niels@provos.com"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "eventlet (>=0.39.1,<0.40.0)",
    "planai[all] (>=0.5.1) ; python_version >= \"3.10\" and python_version < \"4.0\"",
    "flask-cors (>=5.0.1) ; python_version >= \"3.10\" and python_version < \"4.0\""
]

# Correct single definition of packages
[project.packages]
include = ["planaieditor"]

[project.scripts]
planaieditor = "planaieditor.app:main"

# Revert build-system to poetry default
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Add configuration for the custom build script
[tool.poetry.build]
script = "build.py"
generate-setup-file = false

# Keep dev dependencies if needed
[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
pytest = "^8.3.5"
pytest-playwright = "^0.7.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

